# llm-context-builder

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt  setup.py
llm_context_builder/: __init__.py  main.py  project_detector.py
llm_context_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
llm_context_builder/exporters/: __init__.py  base_exporter.py
