[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "llm-context-builder"
version = "1.0.0"
description = "Export any project to a single text file optimized for LLM context"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Your Name", email = "your.email@example.com"}
]
keywords = ["llm", "context", "export", "project", "documentation", "ai"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Software Development :: Documentation",
    "Topic :: Software Development :: Build Tools",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "click>=8.0.0",
    "colorama>=0.4.0",
    "pathspec>=0.10.0",
]

[project.optional-dependencies]
tokens = ["tiktoken>=0.4.0"]
dev = [
    "pytest>=7.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/yourusername/llm-context-builder"
"Bug Reports" = "https://github.com/yourusername/llm-context-builder/issues"
Source = "https://github.com/yourusername/llm-context-builder"

[project.scripts]
export_project = "llm_context_builder.main:cli"
llm-export = "llm_context_builder.main:cli"

[tool.setuptools.packages.find]
include = ["llm_context_builder*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true